--- a/constellation/constellation.html
+++ b/constellation/constellation.html
@@ -39,8 +39,8 @@
   <div class="sparkle" style="top: 60%; left: 35%; animation-delay: 2.9s;"></div>
   <div class="sparkle" style="top: 5%; left: 70%; animation-delay: 1.7s;"></div>
   <header>
-    <h1>오늘의 별자리 운세</h1>
-    <p>별자리를 선택하면 오늘의 운세, 럭키컬러, 럭키넘버를 알려드립니다.</p>
+    <h1 id="header-title">오늘의 별자리 운세</h1>
+    <p>클릭 한 번으로 내 별자리운세를 완벽 분석해 드립니다! 궁금증은 깔끔하게 해결하고, 특별한 하루를 지금 시작하세요</p>
   </header>
 
   <main class="wrap">
