--- a/fortune/fortune.html
+++ b/fortune/fortune.html
@@ -49,7 +49,7 @@
       <h2 id="input-title" class="sr-only">운세 정보 입력</h2>
       <div class="card form-card">
         <div class="form-container">
-          <h3>운세 정보 입력</h3>
+          <div class="form-title">운세 정보 입력</div>
           
           <!-- 성별 선택 -->
           <div class="input-group">
