--- a/constellation/constellation.html
+++ b/constellation/constellation.html
@@ -38,6 +38,64 @@
   <div class="sparkle" style="top: 40%; left: 95%; animation-delay: 0.3s;"></div>
   <div class="sparkle" style="top: 60%; left: 35%; animation-delay: 2.9s;"></div>
   <div class="sparkle" style="top: 5%; left: 70%; animation-delay: 1.7s;"></div>
+  
+  <!-- 랜덤 별들 -->
+  <div class="random-star star-large" style="top: 8%; left: 8%; animation-delay: 0s;"></div>
+  <div class="random-star star-large" style="top: 12%; right: 12%; animation-delay: 0.5s;"></div>
+  <div class="random-star star-medium" style="top: 25%; left: 5%; animation-delay: 1s;"></div>
+  <div class="random-star star-small" style="top: 30%; right: 8%; animation-delay: 1.5s;"></div>
+  <div class="random-star star-large" style="top: 45%; left: 12%; animation-delay: 2s;"></div>
+  <div class="random-star star-medium" style="top: 15%; left: 25%; animation-delay: 0.8s;"></div>
+  <div class="random-star star-small" style="top: 35%; left: 75%; animation-delay: 1.2s;"></div>
+  <div class="random-star star-large" style="top: 55%; left: 85%; animation-delay: 0.3s;"></div>
+  <div class="random-star star-medium" style="top: 65%; left: 15%; animation-delay: 1.8s;"></div>
+  <div class="random-star star-small" style="top: 75%; left: 45%; animation-delay: 2.5s;"></div>
+  <div class="random-star star-large" style="top: 85%; left: 65%; animation-delay: 0.7s;"></div>
+  <div class="random-star star-medium" style="top: 20%; left: 55%; animation-delay: 1.4s;"></div>
+  <div class="random-star star-small" style="top: 40%; left: 35%; animation-delay: 2.1s;"></div>
+  <div class="random-star star-large" style="top: 60%; left: 55%; animation-delay: 0.9s;"></div>
+  <div class="random-star star-medium" style="top: 80%; left: 25%; animation-delay: 1.6s;"></div>
+  <div class="random-star star-small" style="top: 10%; left: 85%; animation-delay: 2.3s;"></div>
+  <div class="random-star star-large" style="top: 50%; left: 5%; animation-delay: 0.4s;"></div>
+  <div class="random-star star-medium" style="top: 70%; left: 95%; animation-delay: 1.9s;"></div>
+  <div class="random-star star-small" style="top: 90%; left: 35%; animation-delay: 2.7s;"></div>
+  <div class="random-star star-large" style="top: 5%; left: 45%; animation-delay: 0.6s;"></div>
+  <div class="random-star star-medium" style="top: 95%; left: 75%; animation-delay: 1.3s;"></div>
+  <div class="random-star star-small" style="top: 18%; left: 15%; animation-delay: 2.8s;"></div>
+  <div class="random-star star-large" style="top: 28%; left: 65%; animation-delay: 0.2s;"></div>
+  <div class="random-star star-medium" style="top: 38%; left: 25%; animation-delay: 1.7s;"></div>
+  <div class="random-star star-small" style="top: 48%; left: 85%; animation-delay: 2.4s;"></div>
+  <div class="random-star star-large" style="top: 58%; left: 45%; animation-delay: 0.8s;"></div>
+  <div class="random-star star-medium" style="top: 68%; left: 5%; animation-delay: 1.5s;"></div>
+  <div class="random-star star-small" style="top: 78%; left: 55%; animation-delay: 2.2s;"></div>
+  <div class="random-star star-large" style="top: 88%; left: 15%; animation-delay: 0.1s;"></div>
+  <div class="random-star star-medium" style="top: 98%; left: 65%; animation-delay: 1.8s;"></div>
+  <div class="random-star star-small" style="top: 22%; left: 35%; animation-delay: 2.6s;"></div>
+  <div class="random-star star-large" style="top: 32%; left: 75%; animation-delay: 0.5s;"></div>
+  <div class="random-star star-medium" style="top: 42%; left: 15%; animation-delay: 1.1s;"></div>
+  <div class="random-star star-small" style="top: 52%; left: 55%; animation-delay: 2.9s;"></div>
+  <div class="random-star star-large" style="top: 62%; left: 25%; animation-delay: 0.7s;"></div>
+  <div class="random-star star-medium" style="top: 72%; left: 85%; animation-delay: 1.4s;"></div>
+  <div class="random-star star-small" style="top: 82%; left: 35%; animation-delay: 2.1s;"></div>
+  <div class="random-star star-large" style="top: 92%; left: 75%; animation-delay: 0.3s;"></div>
+  <div class="random-star star-medium" style="top: 2%; left: 25%; animation-delay: 1.6s;"></div>
+  <div class="random-star star-small" style="top: 12%; left: 65%; animation-delay: 2.8s;"></div>
+    <div class="star star-5 small"></div>
+    <div class="star star-6 small"></div>
+    <div class="star star-7 small"></div>
+    <div class="star star-8 small"></div>
+    <div class="constellation-line line-1"></div>
+    <div class="constellation-line line-2"></div>
+    <div class="constellation-line line-3"></div>
+    <div class="constellation-line line-4"></div>
+  </div>
+  
+  <div class="zodiac-constellation zodiac-virgo" style="top: 50%; right: 15%; animation-delay: 2.5s;">
+    <div class="star star-1 large"></div>
+    <div class="star star-2 medium"></div>
+    <div class="star star-3 medium"></div>
+    <div class="star star-4 small"></div>
+
   <header>
     <h1 id="header-title">오늘의 별자리 운세</h1>
     <p>클릭 한 번으로 내 별자리운세를 완벽 분석해 드립니다! 궁금증은 깔끔하게 해결하고, 특별한 하루를 지금 시작하세요</p>
